deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: by-the-app-api-demo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: by-the-app-api-demo
  template:
    metadata:
      labels:
        app: by-the-app-api-demo
    spec:
      containers:
      - name: by-the-app-api-demo
        image: bytheapp/by-the-app-api-demo:latest
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 8080
      imagePullSecrets:
        - name: #{acr-secret-name}#

---
apiVersion: v1
kind: Service
metadata:
  name: by-the-app-api-demo-service
spec:
  selector:
    app: by-the-app-api-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: by-the-app-api-demo-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
  name: by-the-app-api-demo-ingress
  namespace: #{env-namespace}#
spec:
  tls:
  - hosts:
    - demo-api.bytheapp.com
    secretName: bytheappdemo-tls-secret
  rules:
    - host: demo-api.bytheapp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: by-the-app-api-demo-service
                port:
                  number: 80
